added note to API, tests pending
